migration to java 17 & bump dependencies versions